# car-go

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  event.rs  main.rs  runner.rs
src/render/: build.rs  clippy.rs  diagnostic.rs  fmt.rs  gomod.rs  mod.rs  style.rs  test.rs  vet.rs
tests/: cli_integration.rs
